# Crypto-Sentiment-Analytics

./: .gitignore  README.md  fluent-bit.yaml  main.py  pyproject.toml
Team_Contract/: Task_Assignments.md
analysis/: CCC analysis.ipynb
backend/: config_map.yaml  crypto-ml-results.yaml
backend/backfill_data_ingestion/: bsky-crawler.yaml  mastodon-crawler.yaml
backend/backfill_data_ingestion/blueskyAPI/: Dockerfile  blueskyapi.py  pyproject.toml
backend/backfill_data_ingestion/mastodonAPI/: Dockerfile  mastodonapi.py  pyproject.toml
backend/fission/query-results/: query_results.py
backend/fission/specs/: env-python.yaml  fission-deployment-config.yaml  function-bluesky-processor.yaml  function-delete.yaml  function-enqueue.yaml  function-ingest.yaml  function-mastadon-processor.yaml  function-query.yaml  mqtrigger-ingest.yaml  mqtrigger-raw-bluesky.yaml  mqtrigger-raw-mastodon.yaml  package-delete.yaml  (+10 more)
backend/live_streaming_ingestion/: bsky-stream.yaml  mastodon-stream.yaml
backend/ml/: Dockerfile  narrative_analysis.py  price_analysis.py  pyproject.toml  sentiment_analysis.py  updated_results.py
backend/ml/results/: bitcoin_results.json  bnb_results.json  ethereum_results.json  spike_events.json  usdt_results.json  xrp_results.json
backend/ml/scripts/: updated_es_query.py
database/mappings/: ml_results.json  processed-data-mapping.json
frontend/es_results_pull/: ml_correlations.csv  ml_daily_sentiment.csv  ml_narratives.csv  ml_spike_events.csv  pull_results_from_fission.ipynb  usdt_results.csv
test/: README.md  requirements.txt  utils-test.py
(+18 files in other folders)
