[project]
name = "comp90024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-cinderclient>=9.9.0",
    "python-keystoneclient>=5.8.0",
    "python-magnumclient>=4.10.0",
    "python-neutronclient>=11.8.0",
    "python-novaclient>=18.12.0",
    "python-octaviaclient>=3.13.0",
    "python-openstackclient>=9.0.0",
]








